Using request.contextPath in xhtml instead of /online

--- a/src/main/webapp/templates/page.xhtml
+++ b/src/main/webapp/templates/page.xhtml
@@ -11,30 +11,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title><ui:insert name="title">Default Title</ui:insert></title>
         
-        <link href="/online/resources/foundation/css/normalize.css" rel="stylesheet" />
-        <link href="/online/resources/foundation/css/foundation.css" rel="stylesheet" />
-        <link href="/online/resources/foundation/icons/foundation-icons.css" rel="stylesheet" />
-        <link href="/online/resources/datatables/css/jquery.dataTables.css" rel="stylesheet" />
-        <link href="/online/resources/datatables/css/dataTables.foundation.css" rel="stylesheet" />
+        <link href="#{request.contextPath}/resources/foundation/css/normalize.css" rel="stylesheet" />
+        <link href="#{request.contextPath}/resources/foundation/css/foundation.css" rel="stylesheet" />
+        <link href="#{request.contextPath}/resources/foundation/icons/foundation-icons.css" rel="stylesheet" />
+        <link href="#{request.contextPath}/resources/datatables/css/jquery.dataTables.css" rel="stylesheet" />
+        <link href="#{request.contextPath}/resources/datatables/css/dataTables.foundation.css" rel="stylesheet" />
         
-        <link rel="shortcut icon" href="/online/resources/icons/favicon.ico" />
-        <link rel="apple-touch-icon-precomposed" sizes="1024x1024" href="/online/resources/icons/icon-1024.jpg" />
-        <link rel="apple-touch-icon-precomposed" sizes="512x512" href="/online/resources/icons/icon-512.jpg" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/online/resources/icons/icon-144.jpg" />
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/online/resources/icons/icon-114.jpg" />
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/online/resources/icons/icon-72.jpg" />
-        <link rel="apple-touch-icon-precomposed" href="/online/resources/icons/icon-57.jpg" />
+        <link rel="shortcut icon" href="#{request.contextPath}/resources/icons/favicon.ico" />
+        <link rel="apple-touch-icon-precomposed" sizes="1024x1024" href="#{request.contextPath}/resources/icons/icon-1024.jpg" />
+        <link rel="apple-touch-icon-precomposed" sizes="512x512" href="#{request.contextPath}/resources/icons/icon-512.jpg" />
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="#{request.contextPath}/resources/icons/icon-144.jpg" />
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="#{request.contextPath}/resources/icons/icon-114.jpg" />
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="#{request.contextPath}/resources/icons/icon-72.jpg" />
+        <link rel="apple-touch-icon-precomposed" href="#{request.contextPath}/resources/icons/icon-57.jpg" />
 
-        <script type="text/javascript" src="/online/resources/foundation/js/vendor/modernizr.js"></script>
-        <script type="text/javascript" src="/online/resources/foundation/js/vendor/jquery.js"></script>
-        <script type="text/javascript" src="/online/resources/foundation/js/vendor/fastclick.js"></script>
-        <script type="text/javascript" src="/online/resources/foundation/js/foundation.min.js"></script>
-        <script type="text/javascript" src="/online/resources/foundation/js/confirm_with_reveal.js"></script>
-        <script type="text/javascript" src="/online/resources/datatables/js/jquery.dataTables.min.js"></script>
-        <script type="text/javascript" src="/online/resources/datatables/js/dataTables.foundation.js"></script>
-        <script type="text/javascript" src="/online/resources/datatables/js/dataTables.tableTools.js"></script>
-        <script type="text/javascript" src="/online/resources/dataTables.ext.js"></script>
-        <script type="text/javascript" src="/online/resources/foundation.alert.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/foundation/js/vendor/modernizr.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/foundation/js/vendor/jquery.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/foundation/js/vendor/fastclick.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/foundation/js/foundation.min.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/foundation/js/confirm_with_reveal.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/datatables/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/datatables/js/dataTables.foundation.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/datatables/js/dataTables.tableTools.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/dataTables.ext.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/foundation.alert.js"></script>
     </head>
 
     <body jsf:id="body">
@@ -46,7 +46,7 @@
                 
                 <div class="small-1 columns">
                     <div class="icon-bar small one-up" role="navigation">
-                        <a class="item small-icon-anchor" role="button" tabindex="1" aria-label="system" href="/online/pages/logout.xhtml">
+                        <a class="item small-icon-anchor" role="button" tabindex="1" aria-label="system" href="#{request.contextPath}/pages/logout.xhtml">
                             <i class="fi-lock small-icon"></i>
                         </a>
                     </div>
