--- a/src/main/webapp/templates/page.xhtml
+++ b/src/main/webapp/templates/page.xhtml
@@ -16,6 +16,7 @@
         <link href="#{request.contextPath}/resources/foundation/icons/foundation-icons.css" rel="stylesheet" />
         <link href="#{request.contextPath}/resources/datatables/css/jquery.dataTables.css" rel="stylesheet" />
         <link href="#{request.contextPath}/resources/datatables/css/dataTables.foundation.css" rel="stylesheet" />
+        <link href="#{request.contextPath}/resources/page.css" rel="stylesheet" />
         
         <link rel="shortcut icon" href="#{request.contextPath}/resources/icons/favicon.ico" />
         <link rel="apple-touch-icon-precomposed" sizes="1024x1024" href="#{request.contextPath}/resources/icons/icon-1024.jpg" />
@@ -46,8 +47,9 @@
                 
                 <div class="small-1 columns">
                     <div class="icon-bar small one-up" role="navigation">
-                        <a class="item small-icon-anchor" role="button" tabindex="1" aria-label="system" href="#{request.contextPath}/pages/logout.xhtml">
-                            <i class="fi-lock small-icon"></i>
+                        <a class="item small-icon-anchor" role="button" tabindex="1" aria-label="logout" href="#{request.contextPath}/pages/logout.xhtml">
+                            <!--<span data-tooltip="" aria-haspopup="true" class="has-tip" title="Logout"><i class="fi-lock"></i></span>-->
+                            <i class="fi-lock"></i>
                         </a>
                     </div>
                 </div>
