--- a/src/main/webapp/templates/page.xhtml
+++ b/src/main/webapp/templates/page.xhtml
@@ -42,7 +42,7 @@
         <div class="panel small-panel">
             <div class="row">
                 <div class="small-11 columns">
-                    <h3><ui:insert name="header">Default Header</ui:insert></h3>
+                    <h3 id="smallPanelHeader"><ui:insert name="header">Default Header</ui:insert></h3>
                 </div>
                 
                 <div class="small-1 columns">
